fix: Angemeldet bleiben Checkbox für Gast-Login
- Checkbox 'Angemeldet bleiben' hinzugefügt (standardmäßig aktiviert)
- Wenn aktiviert: localStorage (persistent über Browser-Sessions)
- Wenn deaktiviert: sessionStorage (wird bei Tab-Schließen gelöscht)
- loadGuestSession prüft jetzt beide Storage-Typen
- Logout löscht beide Storage-Typen
- i18n Übersetzungen hinzugefügt (DE/EN)
- Service Worker Cache Version erhöht (v16)

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2389,6 +2389,12 @@
                 <label>Passwort</label>
                 <input type="password" id="guestPassword" placeholder="Ihr Passwort">
             </div>
+            <div class="form-group checkbox-group" style="margin: 16px 0;">
+                <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
+                    <input type="checkbox" id="guestRememberMe" checked style="width: 18px; height: 18px;">
+                    <span data-i18n="login.rememberMe">Angemeldet bleiben</span>
+                </label>
+            </div>
             <button class="btn btn-primary" id="loginBtn" data-i18n="login.submit">Anmelden</button>
             <button class="btn btn-secondary" id="closeLoginBtn" data-i18n="login.cancel">Abbrechen</button>
             <div class="error-text" id="loginError"></div>
@@ -2536,3 +2542,4 @@
     </script>
 </body>
 </html>
+<!-- Deployed: Mon 26 Jan 2026 09:45:31 AM CET -->
