--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -899,29 +899,47 @@
         /* Responsive */
         @media (max-width: 640px) {
             .header {
-                padding: 48px 20px 70px;
-                padding-top: calc(env(safe-area-inset-top) + 16px);
+                padding: 12px 16px;
+                padding-top: calc(env(safe-area-inset-top) + 8px);
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 12px;
+            }
+
+            /* Mobile App-Style: Logo + Text nebeneinander */
+            .header-content {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 12px;
+                text-align: left;
+                flex: 1;
             }
 
             .header h1 {
-                font-size: 1.8rem;
+                font-size: 1.2rem;
+                margin-bottom: 2px;
+                letter-spacing: 0.5px;
             }
 
             .header .subtitle {
-                font-size: 1rem;
+                font-size: 0.75rem;
+                letter-spacing: 0.5px;
             }
 
             .header-logo {
-                width: 100px;
-                height: 100px;
-                padding: 14px;
-                margin-bottom: 12px;
+                width: 52px;
+                height: 52px;
+                padding: 8px;
+                margin-bottom: 0;
+                flex-shrink: 0;
             }
 
             .main {
                 z-index: 1;
-                margin-top: -30px;
-                padding: 0 12px;
+                margin-top: 0;
+                padding: 12px 12px 0;
             }
 
             /* Card Borders für Mobile entfernen */
@@ -960,41 +978,43 @@
                 grid-template-columns: 1fr;
             }
 
-            /* Header Actions kompakter */
+            /* Header Actions kompakter - nur Icon-Buttons */
             .header-actions {
-                top: calc(env(safe-area-inset-top) + 8px);
-                right: 12px;
-                gap: 8px;
-            }
-
-            .guest-login-btn,
-            .status-btn {
-                padding: 6px 12px;
-                font-size: 0.8rem;
-                border-radius: 20px;
-            }
-
-            .guest-login-btn i,
-            .status-btn i {
-                width: 14px;
-                height: 14px;
-            }
-
-            /* Quick Nav kompakter */
-            .quick-nav {
-                padding: 12px 8px;
+                position: static;
+                order: 2;
                 gap: 6px;
             }
-
-            .quick-nav-btn {
-                padding: 8px 10px;
-                min-width: 60px;
-                font-size: 0.75rem;
+            
+            .header-content {
+                order: 1;
             }
 
-            .quick-nav-btn i {
+            .guest-login-btn {
+                padding: 8px;
+                font-size: 0;
+                border-radius: 50%;
+                width: 36px;
+                height: 36px;
+                justify-content: center;
+            }
+
+            .guest-login-btn span {
+                display: none;
+            }
+
+            .guest-login-btn i {
                 width: 18px;
                 height: 18px;
+            }
+            
+            .status-indicator {
+                width: 8px;
+                height: 8px;
+            }
+
+            /* Quick Nav auf Mobile verstecken - Footer übernimmt Navigation */
+            .quick-nav {
+                display: none !important;
             }
 
             /* Footer für Mobile Bottom Nav Platz */
