--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -67,6 +67,9 @@
 
         html {
             scroll-behavior: smooth;
+            /* Verhindert Overscroll-Bounce auf iOS */
+            overscroll-behavior: none;
+            -webkit-overflow-scrolling: touch;
         }
 
         body {
@@ -1833,6 +1836,14 @@
         @media (max-width: 640px) {
             .mobile-bottom-nav {
                 display: block;
+                position: fixed !important;
+                bottom: 0 !important;
+                left: 0 !important;
+                right: 0 !important;
+                transform: none !important;
+                /* Verhindert Verschiebung durch iOS Safari Bounce */
+                -webkit-transform: translateZ(0);
+                transform: translateZ(0);
             }
         }
 
