--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2637,8 +2637,22 @@
                     </div>
                 </div>
                 <div style="padding: 0 20px 20px;">
+                    <!-- Kurtaxe Info - dezent gestaltet -->
+                    <div id="kurtaxeInfoSection" style="margin-bottom: 24px; padding: 16px; background: linear-gradient(135deg, var(--cream) 0%, rgba(156, 175, 136, 0.08) 100%); border-radius: 12px; border: 1px solid rgba(156, 175, 136, 0.15);">
+                        <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 12px;">
+                            <i data-lucide="receipt" style="width: 16px; height: 16px; color: var(--sage-dark);"></i>
+                            <span style="font-size: 0.85rem; font-weight: 500; color: var(--text-light); text-transform: uppercase; letter-spacing: 0.5px;" data-i18n="kurtaxe.title">Ortstaxe</span>
+                        </div>
+                        <p style="font-size: 0.9rem; color: var(--text-light); line-height: 1.6; margin-bottom: 12px;" data-i18n="kurtaxe.description">
+                            Die Ortstaxe (Kurtaxe) ist eine gesetzliche Abgabe und wird direkt an die Gemeinde abgeführt.
+                        </p>
+                        <div style="display: flex; align-items: baseline; gap: 6px;">
+                            <span style="font-size: 1.1rem; font-weight: 600; color: var(--forest);" id="kurtaxeAmount">€2,50</span>
+                            <span style="font-size: 0.85rem; color: var(--text-muted);" data-i18n="kurtaxe.perPersonNight">pro Person / Nacht</span>
+                        </div>
+                    </div>
+
                     <p id="transparencyText" style="color: var(--text-light); font-size: 0.9rem; margin-bottom: 20px; line-height: 1.6;" data-i18n="transparency.text">
-                        Im Rahmen Ihres Aufenthalts können Kurtaxe und Energiekosten anfallen.
                         Für Ihre Unterlagen und vollständige Transparenz finden Sie hier die Kontodaten:
                     </p>
 
