fix: Change Settings icons to Admin icons, update links to /admin

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2714,15 +2714,15 @@
             </div>
             <!-- Admin Button - größer für Desktop -->
             <div style="margin-bottom: 16px;">
-                <a href="/admin.html" class="admin-link" style="color: var(--text-muted); text-decoration: none; transition: all 0.2s;" title="Admin-Bereich">
-                    <i data-lucide="settings" style="width: 14px; height: 14px; vertical-align: middle; margin-right: 4px;"></i>
+                <a href="/admin" class="admin-link" style="color: var(--text-muted); text-decoration: none; transition: all 0.2s;" title="Admin-Bereich">
+                    <i data-lucide="layout-dashboard" style="width: 14px; height: 14px; vertical-align: middle; margin-right: 4px;"></i>
                     Admin
                 </a>
             </div>
             <div style="font-size: 0.8rem; color: var(--text-muted);">
                 Powered by <a href="https://ssi.at" target="_blank" style="color: var(--sage-dark); text-decoration: none; font-weight: 500;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--sage-dark)'">SSI</a>
                 <span style="margin: 0 8px;">•</span>
-                <span id="appVersion">v0.8.0</span>
+                <span id="appVersion">v0.9.0</span>
             </div>
         </div>
     </footer>
@@ -2742,8 +2742,8 @@
                 <i data-lucide="map-pin"></i>
                 <span data-i18n="nav.nearby">Umgebung</span>
             </button>
-            <a href="/admin.html" class="mobile-nav-item admin-btn" title="Admin-Bereich">
-                <i data-lucide="settings"></i>
+            <a href="/admin" class="mobile-nav-item admin-btn" title="Admin-Bereich">
+                <i data-lucide="layout-dashboard"></i>
                 <span>Admin</span>
             </a>
         </div>
