ux: Rename Energy to Costs, move to right in nav

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2190,13 +2190,13 @@
                 <i data-lucide="map-pin"></i>
                 <span data-i18n="header.recommendations">Empfehlungen</span>
             </button>
-            <button class="quick-nav-btn" onclick="scrollToSection('energyCard')" title="Zur Energie">
-                <i data-lucide="zap"></i>
-                <span data-i18n="header.energy">Energie</span>
-            </button>
             <button class="quick-nav-btn" onclick="scrollToSection('wifiCard')" title="Zum WiFi">
                 <i data-lucide="wifi"></i>
                 <span data-i18n="header.wifi">WiFi</span>
+            </button>
+            <button class="quick-nav-btn" onclick="scrollToSection('energyCard')" title="Zu Kosten">
+                <i data-lucide="receipt"></i>
+                <span data-i18n="header.costs">Kosten</span>
             </button>
         </div>
     </header>
