feat: Show kWh price in energy card

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2624,6 +2624,11 @@
                 <!-- Info-Hinweis -->
                 <div class="energy-info-notice">
                     <p data-i18n="energy.heatingInfo">ℹ️ Diese Anzeige zeigt nur die Heizkosten – nicht die normalen Betriebskosten (Licht, Wasserkocher, etc.). Da das Heizen mit den Wandheizstrahlern viel Strom verbraucht, bitten wir um einen fairen Beitrag zu diesen Zusatzkosten.</p>
+                    <p style="margin-top: 8px; font-size: 0.85rem; color: var(--text-muted);">
+                        <i data-lucide="zap" style="width: 14px; height: 14px; display: inline-block; vertical-align: middle; margin-right: 4px;"></i>
+                        <span data-i18n="energy.priceInfo">Aktueller Strompreis:</span>
+                        <strong id="energyPriceDisplay" style="color: var(--forest);">0,29 €/kWh</strong>
+                    </p>
                 </div>
             </div>
 
