feat: add free laundry info to quick info section

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2290,6 +2290,11 @@
                         <div class="value" data-i18n="info.petsValue">Erlaubt</div>
                     </div>
                     <div class="info-item">
+                        <span class="icon"><i data-lucide="washing-machine"></i></span>
+                        <div class="label" data-i18n="info.laundry">Waschmaschine</div>
+                        <div class="value" data-i18n="info.laundryValue">Kostenlos</div>
+                    </div>
+                    <div class="info-item">
                         <span class="icon"><i data-lucide="cigarette-off"></i></span>
                         <div class="label" data-i18n="info.smoking">Rauchen</div>
                         <div class="value" data-i18n="info.smokingValue">Verboten</div>
