feat: add included utilities info (gas, wood, pellets)

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2295,6 +2295,11 @@
                         <div class="value" data-i18n="info.laundryValue">Kostenlos</div>
                     </div>
                     <div class="info-item">
+                        <span class="icon"><i data-lucide="package-check"></i></span>
+                        <div class="label" data-i18n="info.included">Inklusive</div>
+                        <div class="value" data-i18n="info.includedValue">Betriebskosten, Gas, Holz & Pellets</div>
+                    </div>
+                    <div class="info-item">
                         <span class="icon"><i data-lucide="cigarette-off"></i></span>
                         <div class="label" data-i18n="info.smoking">Rauchen</div>
                         <div class="value" data-i18n="info.smokingValue">Verboten</div>
